created schema, installed db

--- a/package.json
+++ b/package.json
@@ -1,7 +1,6 @@
 {
   "name": "userdirectory",
   "version": "1.0.0",
-  "description": "",
   "main": "data.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
@@ -18,8 +17,15 @@
   },
   "homepage": "https://github.com/hamiltonmoore/userDirectory#readme",
   "dependencies": {
+    "bcryptjs": "^2.4.3",
+    "body-parser": "^1.17.2",
     "express": "^4.15.4",
+    "express-session": "^1.15.5",
     "mongodb": "^2.2.31",
+    "mongoose": "^4.10.8",
+    "morgan": "^1.8.2",
     "mustache-express": "^1.2.5"
-  }
+  },
+  "devDependencies": {},
+  "description": ""
 }
